deployment/stg/k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
spec:
  ports:
    - port: 8886
  selector:
    app: website
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: website-np
spec:
  podSelector:
    matchLabels:
      app: website
  policyTypes:
    - Ingress
  ingress:
  - from:
    - ipBlock:
        # Ingress reverse proxy
        cidr: '0.0.0.0/0'
        except: ['10.0.0.0/8']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
spec:
  selector:
    matchLabels:
      app: website
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
          - image: us-west1-docker.pkg.dev/hydrox-ai/hydro-social/website@sha256:ae08cff9bc7d2ae8aa03dd2105bf629a91a3d33d534fe85b5980c0f7e0341b3b
          imagePullPolicy: "Always"
          name: website
          ports:
            - containerPort: 8886
          readinessProbe:
            httpGet:
              path: /
              port: 8886
            initialDelaySeconds: 10
            periodSeconds: 60
          livenessProbe:
            httpGet:
              path: /
              port: 8886
            initialDelaySeconds: 10
            periodSeconds: 60
          resources:
            requests:
              cpu: 2.5m
              memory: 8Mi
      restartPolicy: Always
